[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=1]
[ext_resource path="res://Assets/rpg.png" type="Texture" id=2]
[ext_resource path="res://Assets/kenpixel.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Slot.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/trash.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Equip.gd" type="Script" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=2]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=3]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=4]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="StyleBoxEmpty" id=5]

content_margin_left = -1.0
content_margin_right = -1.0
content_margin_top = -1.0
content_margin_bottom = -1.0

[sub_resource type="DynamicFont" id=6]

size = 8
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="Animation" id=7]

length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Slots:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -219 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Back:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 200, -107 ), Vector2( 200, 112 ) ]
}

[node name="Inventory" type="CanvasLayer"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="Back" type="Sprite" parent="." index="0"]

position = Vector2( 200, -111 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 3.90601, 96.451, 120, 141 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="BtnClose" type="Button" parent="Back" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 36.0
margin_top = -63.0
margin_right = 58.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = SubResource( 5 )
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
flat = false
align = 1
_sections_unfolded = [ "custom_styles" ]

[node name="Info" type="Label" parent="Back" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -50.0
margin_top = 33.0
margin_right = 35.0
margin_bottom = 61.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 6 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "preda"
align = 1
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors", "custom_fonts", "custom_styles" ]

[node name="Slots" type="Control" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = -223.0
margin_right = 40.0
margin_bottom = -183.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Slot" parent="Slots" index="0" instance=ExtResource( 4 )]

margin_left = 141.0
margin_top = 82.0
margin_right = 159.0
margin_bottom = 100.0
type = null
filter = null

[node name="Slot2" parent="Slots" index="1" instance=ExtResource( 4 )]

margin_left = 161.0
margin_top = 82.0
margin_right = 179.0
margin_bottom = 100.0
type = null
filter = null

[node name="Slot3" parent="Slots" index="2" instance=ExtResource( 4 )]

margin_left = 182.0
margin_top = 82.0
margin_right = 200.0
margin_bottom = 100.0
type = null
filter = null

[node name="Slot4" parent="Slots" index="3" instance=ExtResource( 4 )]

margin_left = 202.0
margin_top = 82.0
margin_right = 220.0
margin_bottom = 100.0
type = null
filter = null

[node name="Slot5" parent="Slots" index="4" instance=ExtResource( 4 )]

margin_left = 222.0
margin_top = 82.0
margin_right = 240.0
margin_bottom = 100.0
type = null
filter = null

[node name="Slot6" parent="Slots" index="5" instance=ExtResource( 4 )]

margin_left = 141.0
margin_top = 102.0
margin_right = 159.0
margin_bottom = 120.0
type = null
filter = null

[node name="Slot7" parent="Slots" index="6" instance=ExtResource( 4 )]

margin_left = 161.0
margin_top = 102.0
margin_right = 179.0
margin_bottom = 120.0
type = null
filter = null

[node name="Slot8" parent="Slots" index="7" instance=ExtResource( 4 )]

margin_left = 182.0
margin_top = 102.0
margin_right = 200.0
margin_bottom = 120.0
type = null
filter = null

[node name="Slot9" parent="Slots" index="8" instance=ExtResource( 4 )]

margin_left = 202.0
margin_top = 102.0
margin_right = 220.0
margin_bottom = 120.0
type = null
filter = null

[node name="Slot10" parent="Slots" index="9" instance=ExtResource( 4 )]

margin_left = 222.0
margin_top = 102.0
margin_right = 240.0
margin_bottom = 120.0
type = null
filter = null

[node name="Slot11" parent="Slots" index="10" instance=ExtResource( 4 )]

margin_left = 141.0
margin_top = 122.0
margin_right = 159.0
margin_bottom = 140.0
type = null
filter = null

[node name="Slot12" parent="Slots" index="11" instance=ExtResource( 4 )]

margin_left = 161.0
margin_top = 122.0
margin_right = 179.0
margin_bottom = 140.0
type = null
filter = null

[node name="Slot13" parent="Slots" index="12" instance=ExtResource( 4 )]

margin_left = 182.0
margin_top = 122.0
margin_right = 200.0
margin_bottom = 140.0
type = null
filter = null

[node name="Slot14" parent="Slots" index="13" instance=ExtResource( 4 )]

margin_left = 203.0
margin_top = 122.0
margin_right = 221.0
margin_bottom = 140.0
type = 0
filter = null

[node name="Slot15" parent="Slots" index="14" instance=ExtResource( 4 )]

margin_left = 222.0
margin_top = 122.0
margin_right = 240.0
margin_bottom = 140.0
type = 3
filter = null

[node name="Sprite" type="Sprite" parent="Slots/Slot15" index="2"]

position = Vector2( 8.6875, 8.375 )
scale = Vector2( 0.145508, 0.150391 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Anim" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Open = SubResource( 7 )
blend_times = [  ]

[node name="BackEquip" type="Sprite" parent="." index="3"]

position = Vector2( 51, 202 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 182.547, 237.431, 83.453, 33.2107 )
_sections_unfolded = [ "Region", "Transform" ]

[node name="Equip" type="Control" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
script = ExtResource( 6 )

[node name="SlotSword" parent="Equip" index="0" instance=ExtResource( 4 )]

margin_left = 12.0
margin_top = 194.0
margin_right = 30.0
margin_bottom = 212.0
type = 2
filter = [ 20 ]

[node name="SlotArmor" parent="Equip" index="1" instance=ExtResource( 4 )]

margin_left = 32.0
margin_top = 194.0
margin_right = 50.0
margin_bottom = 212.0
type = null
filter = null

[node name="SlotHelmet" parent="Equip" index="2" instance=ExtResource( 4 )]

margin_left = 53.0
margin_top = 194.0
margin_right = 71.0
margin_bottom = 212.0
type = 2
filter = [ 43 ]

[node name="SlotTool" parent="Equip" index="3" instance=ExtResource( 4 )]

margin_left = 73.0
margin_top = 194.0
margin_right = 91.0
margin_bottom = 212.0
type = null
filter = null

[connection signal="pressed" from="Back/BtnClose" to="." method="_on_BtnClose_pressed"]

[connection signal="changed" from="Equip/SlotSword" to="Equip" method="_on_SlotSword_changed"]

[connection signal="changed" from="Equip/SlotHelmet" to="Equip" method="_on_SlotHelmet_changed"]


